2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-backslashify-string): added.  given a string, adds
	backslashes to make a regexp that matches the original string.
	(tnt-strip-a-href): now calls backslashify, so that when a url
	comes in that has a ? in it, we still don't see it twice.

2000-07-27  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-restore-buddy-list): made interactive.

2000-07-24  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-neliminate-newlines): now replacing newlines *and*
	carriage returns with spaces.  not entirely sure whether this is
	necessary, but it can't hurt.
	(tnt-append-message): now calling toc-normalize.  there was some
	situation where a name was not getting colored properly because of
	this.
	(tnt-append-message-and-adjust-window): now calling
	tnt-reformat-text instead of tnt-strip-html.
	(tnt-pipe-message-to-program): now calling tnt-reformat-text
	instead of tnt-strip-html.
	(tnt-handle-chat-invite): now calling tnt-reformat-text instead of
	tnt-strip-html.
	(tnt-strip-some-html): added.  similar to tnt-strip-html, but
	takes the regexp and replacement string as input.
	(tnt-html-regexps): added.  a list of regexp-and-replacement
	pairs.
	(tnt-strip-html): removed the call to strip-a-href, since
	reformat-text now takes care of that.
	(tnt-reformat-text): added.  just calls tnt-strip-some-html
	repeatedly, with all the regexps in tnt-html-regexps.

2000-07-11  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-get-buddy-at-point): added.  pulled part of
	tnt-im-buddy out into its own function.
	(tnt-im-buddy): now calling get-buddy-at-point
	(tnt-buddy-on-mouse-down): added.  variable to store the nickname
	that the user "mouse-down"ed on, to check whether they mouse-up on
	the same nickname.
	(tnt-im-buddy-mouse-down): added.  stores nickname in above.
	(tnt-im-buddy-mouse-up): added.  compares nickname to above, then
	starts IM conversation.