@@ -1,5 +1,10 @@
 2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
 
+	* tnt.el (tnt-switch-user): now checks if we're online, and won't
+	change username if we are.
+
+2000-07-28  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
+
 	* tnt.el (tnt-backslashify-string): added.  given a string, adds
 	backslashes to make a regexp that matches the original string.
 	(tnt-strip-a-href): now calls backslashify, so that when a url
